bookmark highlighting frontend